Fixed minor button icon alignment issue

--- a/client/src/assets/styles/components/button.scss
+++ b/client/src/assets/styles/components/button.scss
@@ -70,6 +70,7 @@
 
 .abstract-selectable {
     &:hover,
+    &:focus-visible,
     &[data-focus-visible] {
         background-color: rgba(0, 0, 0, 0.05);
         
@@ -91,11 +92,15 @@
 .button--rounded {
     @extend .button, .abstract-selectable;
     
-    line-height: 1;
     width: 1.6em;
+    line-height: 1;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
     padding: 3px 0 0;
+    
+    .icon {
+        line-height: 1;
+    }
 }
 
 a.button--rounded {
